Revert "fix: list items' wonky spacing, +adjust-list-items mixin (scss)"
This reverts commit 2dfc5c11a57bf3a9a8346e4aa1ced670ebc81367.

--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -185,24 +185,3 @@
 		}
 	}
 }
-
-@mixin adjust-list-items() {
-	ol,
-	ul {
-		padding-left: 2rem;
-	}
-
-	ol,
-	ul,
-	dl {
-		margin-top: 0;
-		margin-bottom: 1rem;
-	}
-
-	ol ol,
-	ul ul,
-	ol ul,
-	ul ol {
-		margin-bottom: 0;
-	}
-}
