--- a/scss/topic.scss
+++ b/scss/topic.scss
@@ -25,8 +25,6 @@
 			}
 			list-style-type: none;
 
-			@include adjust-list-items();
-
 			&.timeline {
 				@include timeline-style;
 			}
